@@ -227,22 +227,29 @@ public class DatasetServiceImpl implements DatasetService {
   private StatisticsRepository statisticsRepository;
 
 
-  /** The kafka sender utils. */
+  /**
+   * The kafka sender utils.
+   */
   @Autowired
   private KafkaSenderUtils kafkaSenderUtils;
 
-  /** The dataset metabase service. */
+  /**
+   * The dataset metabase service.
+   */
   @Autowired
   private DatasetMetabaseService datasetMetabaseService;
 
-  /** The representative controller zuul. */
+  /**
+   * The representative controller zuul.
+   */
   @Autowired
   private RepresentativeControllerZuul representativeControllerZuul;
 
-  /** The field no validation mapper. */
+  /**
+   * The field no validation mapper.
+   */
   @Autowired
   private FieldNoValidationMapper fieldNoValidationMapper;
-
 
 
   /**
@@ -798,12 +805,9 @@ public class DatasetServiceImpl implements DatasetService {
         recordValidationRepository.findRecordIdFromRecordWithValidationsByLevelError(datasetId,
             tableValue.getIdTableSchema(), ErrorTypeEnum.INFO);
 
-
     Set<Long> recordIdsFromFieldWithValidationInfo =
         recordValidationRepository.findRecordIdFromFieldWithValidationsByLevelError(datasetId,
             tableValue.getIdTableSchema(), ErrorTypeEnum.INFO);
-
-
 
     Set<Long> idsBlockers = new HashSet<>();
     idsBlockers.addAll(recordIdsFromRecordWithValidationBlocker);
@@ -820,7 +824,6 @@ public class DatasetServiceImpl implements DatasetService {
     Set<Long> idsInfos = new HashSet<>();
     idsInfos.addAll(recordIdsFromRecordWithValidationInfo);
     idsInfos.addAll(recordIdsFromFieldWithValidationInfo);
-
 
     idsErrors.removeAll(idsBlockers);
     idsWarnings.removeAll(idsBlockers);
@@ -912,6 +915,7 @@ public class DatasetServiceImpl implements DatasetService {
    * @param idTableSchema the id table schema
    * @param statName the stat name
    * @param value the value
+   *
    * @return the statistics
    */
   private Statistics fillStat(Long idDataset, String idTableSchema, String statName, String value) {
@@ -986,7 +990,6 @@ public class DatasetServiceImpl implements DatasetService {
       Statistics statsDatasetErrors =
           fillStat(datasetId, null, "datasetErrors", datasetErrors.toString());
       statsList.add(statsDatasetErrors);
-
 
       statisticsRepository.deleteStatsByIdDataset(datasetId);
       statisticsRepository.flush();
@@ -1347,6 +1350,7 @@ public class DatasetServiceImpl implements DatasetService {
    * Checks if is reporting dataset.
    *
    * @param datasetId the dataset id
+   *
    * @return true, if is reporting dataset
    */
   @Override
@@ -1360,6 +1364,7 @@ public class DatasetServiceImpl implements DatasetService {
    *
    * @param datasetId the dataset id
    * @param fieldSchemaVO the field schema VO
+   *
    * @throws EEAException the EEA exception
    */
   @Override
@@ -1405,7 +1410,6 @@ public class DatasetServiceImpl implements DatasetService {
     }
 
   }
-
 
 
   /**
@@ -1466,6 +1470,7 @@ public class DatasetServiceImpl implements DatasetService {
    * @param datasetId the dataset id
    * @param idPk the id pk
    * @param searchValue the search value
+   *
    * @return the field values referenced
    */
   @Override
@@ -1484,17 +1489,23 @@ public class DatasetServiceImpl implements DatasetService {
       switch (fields.get(0).getType()) {
         case COORDINATE_LAT:
           sortedList = fields.stream()
-              .sorted((v1, v2) -> new Double(v1.getValue()).compareTo(new Double(v2.getValue())))
+              .sorted(
+                  (v1, v2) -> Double.valueOf(v1.getValue())
+                      .compareTo(Double.valueOf(v2.getValue())))
               .collect(Collectors.toList());
           break;
         case COORDINATE_LONG:
           sortedList = fields.stream()
-              .sorted((v1, v2) -> new Double(v1.getValue()).compareTo(new Double(v2.getValue())))
+              .sorted(
+                  (v1, v2) -> Double.valueOf(v1.getValue())
+                      .compareTo(Double.valueOf(v2.getValue())))
               .collect(Collectors.toList());
           break;
         case NUMBER:
           sortedList = fields.stream()
-              .sorted((v1, v2) -> new Integer(v1.getValue()).compareTo(new Integer(v2.getValue())))
+              .sorted(
+                  (v1, v2) -> Integer.valueOf(v1.getValue())
+                      .compareTo(Integer.valueOf(v2.getValue())))
               .collect(Collectors.toList());
           break;
         case DATE:
@@ -1517,12 +1528,12 @@ public class DatasetServiceImpl implements DatasetService {
   }
 
 
-
   /**
    * Gets the referenced dataset id.
    *
    * @param datasetId the dataset id
    * @param idPk the id pk
+   *
    * @return the referenced dataset id
    */
   @Override
